--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,7 @@ header {
     color: var(--clr-white);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-    padding: 1rem 2rem;
+    padding: 1rem 1.5rem;
 
     h1 {
         font-size: 1.5rem;
@@ -14,7 +14,7 @@ header {
     }
 
     & nav {
-        display: flex;
+        display: none;
         align-items: center;
         gap: 1.5rem;
 
@@ -22,7 +22,6 @@ header {
     color: var(--clr-white);
     font-size: 1.15rem;
     font-weight: 500;
-    text-decoration: none;
 }
 
     }
