--- a/styles/global.css
+++ b/styles/global.css
@@ -18,3 +18,16 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+.btn {
+     background-color: var(--clr-primary);
+    width: fit-content;
+    padding: .85rem 1.25rem;
+    border-radius: .5rem;
+    color: var(--clr-white);
+    transition: transform 150ms ease;
+
+&:hover {
+    transform: scale(1.01);
+}
+}
