--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,19 @@ color: var(--clr-black);
 
 /* Utilitary */
 
+section {
+    display: flex;
+    flex-direction: column;
+    padding: 2.25rem 1.75rem;
+}
+
+h2 {
+     font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 150%;
+    text-transform: uppercase;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -31,3 +44,5 @@ a {
     transform: scale(1.01);
 }
 }
+
+
