--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,9 @@
 main {
 
     & #home {
-        display: flex;
-        flex-direction: column;
 justify-content: center;
         height: 700px;
-padding-inline: 1.5rem;
+
 background: url(../assets/dv-img-mobile.png) no-repeat -3.5rem;
 
         & .home-cta {
@@ -34,20 +32,11 @@ background: url(../assets/dv-img-mobile.png) no-repeat -3.5rem;
     }
 
     & #about {
-        display: flex;
-        flex-direction: column;
         gap: 1.5rem;
-        padding: 2.25rem 1.75rem;
+        
         background-color: var(--clr-black);
         color: var(--clr-white);
-
-& h2 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 150%;
-    text-transform: uppercase;
-}
-
+        
 & img {
     border-radius: .6rem;
 }
@@ -59,5 +48,34 @@ background: url(../assets/dv-img-mobile.png) no-repeat -3.5rem;
 }
 
     } 
+    
+& #projects {
+& #cards { 
+    padding-block: 1rem 2.5rem;
+display: flex;
+flex-direction: column;
+gap: 1rem;
+& .card {
+    background-color: var(--clr-black);
+    color: var(--clr-white);
+    padding-inline: 1rem;
+    padding-block: 1.25rem 2.5rem;
+    border-radius: .25rem;
+
+    & img {
+        width: 100%;
+        border-radius: 1rem;
+    }
+
+& h3 {
+    font-size: 1.25rem;
+    font-weight: 500;
+    margin-block: .875rem .75rem;
+}
+
+}
+
+}
+}
 
 }
