adding section services

--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,10 @@ a {
     text-decoration: none;
 }
 
+ul[role="list"] {
+    list-style: none;
+}
+
 .btn {
      background-color: var(--clr-primary);
     width: fit-content;
