--- a/styles/main.css
+++ b/styles/main.css
@@ -78,4 +78,42 @@ gap: 1rem;
 }
 }
 
+& #services {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    background-color: var(--clr-black);
+    color: var(--clr-white);
+
+    & ul {
+        margin-top: 1rem;
+        display: flex;
+    }
+
+& .services {
+    & ul {
+        flex-direction: column;
+        gap: 1rem;
+        
+        & li {
+            width: 100%;
+            border-radius: .2rem;
+            padding: 1rem;
+            font-size: 1.25rem;
+        }
+}
+
+}
+
+& .knowledge {
+    
+    & ul {
+        flex-wrap: wrap;
+        gap: 1.4rem;
+    }
+
+
+}
+
+}
 }
