--- a/styles/global.css
+++ b/styles/global.css
@@ -17,7 +17,8 @@ color: var(--clr-black);
 section {
     display: flex;
     flex-direction: column;
-    padding: 2.25rem 1.75rem;
+    padding-inline: 1.75rem;
+    padding-block: 2rem 3.5rem;
 }
 
 h2 {
