--- a/styles/main.css
+++ b/styles/main.css
@@ -88,11 +88,11 @@ gap: 1rem;
     & ul {
         margin-top: 1rem;
         display: flex;
+        flex-wrap: wrap;
     }
 
 & .services {
     & ul {
-        flex-direction: column;
         gap: 1rem;
         
         & li {
@@ -108,7 +108,6 @@ gap: 1rem;
 & .knowledge {
     
     & ul {
-        flex-wrap: wrap;
         gap: 1.4rem;
     }
 
@@ -116,4 +115,25 @@ gap: 1rem;
 }
 
 }
+
+& #contact {
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: var(--clr-black);
+    gap: 2rem;
+    
+& ul {
+    display: flex;
+    flex-direction: column;
+gap: .75rem;
+
+}
+
+& cite {
+    text-transform: uppercase;
+    font-style: normal;
+}
+
+}
+
 }
