--- a/styles/global.css
+++ b/styles/global.css
@@ -38,6 +38,9 @@ ul[role="list"] {
 }
 
 .btn {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
      background-color: var(--clr-primary);
     width: fit-content;
     padding: .85rem 1.25rem;
